demo/03.service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: petstore
  labels:
    app: petstore
  annotations:
    kubernetes.io/ingress.class: 'kong'
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: petstore
