demo/06.service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: petstore
  labels:
    app: petstore
  annotations:
    kubernetes.io/ingress.class: 'kong'
    configuration.konghq.com: proxy
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: petstore
