demo/04.public-ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-petstore
  annotations:
    kubernetes.io/ingress.class: 'kong'
spec:
  rules:
    - http:
        paths:
          - path: /pet
            backend:
              serviceName: petstore
              servicePort: 8080
