demo/09.public-ingress-3.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-petstore
  namespace: petstore
  annotations:
    kubernetes.io/ingress.class: 'kong'
    konghq.com/plugins: rate-limiting,prometheus
spec:
  rules:
    - http:
        paths:
          - path: /pet
            backend:
              serviceName: petstore
              servicePort: 8080
